# glicko-arena

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: astro.config.mjs  package-lock.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/contributing/: dev-workflow.md  releasing.md  testing.md
docs/src/content/docs/glicko-eval/: overview.md
docs/src/content/docs/glicko2/: algorithm.md  core-concepts.md  getting-started.md  storage.md  tournament-formats.md
docs/src/content/docs/overview/: architecture.md  introduction.md  packages.md
docs/src/styles/: custom.css
