[project]
name = "glicko-arena"
version = "0.1.0"
description = "Glicko-2 powered arena evaluation monorepo"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = '(^|/)(tests|dist)/'

[[tool.mypy.overrides]]
module = ["psycopg", "psycopg.*"]
ignore_missing_imports = true
